[package]
name = "cairo-runtime-api"
version = "0.1.0"
edition = "2024"
description = "Runner executable for the Cairo programming language"

[dependencies]
cairo-lang-compiler = "~2.11.4"
cairo-lang-diagnostics = "~2.11.4"
cairo-lang-filesystem = "~2.11.4"
cairo-lang-runner = "~2.11.4"
cairo-lang-sierra-generator = "~2.11.4"
cairo-lang-starknet = "~2.11.4"
cairo-lang-semantic = "~2.11.4"
cairo-lang-defs = "~2.11.4"
cairo-lang-formatter = "~2.11.4"
cairo-lang-utils = "~2.11.4"

axum = "0.8"
tokio = { version = "1.45", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.17", features = ["v4"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
