[package]
name = "cairo-runner-lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
cairo-runner-types = { path = "../types" }
cairo-runners = { path = "../runners" }
lambda_http = "0.13.0"
lambda_runtime = "0.13.0"
serde_json = "1.0"
tokio = { version = "1", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors"] }
