[package]
name = "cairo-runners"
version = "0.1.0"
edition = "2024"
description = "Runner executable for the Cairo programming language"


[dependencies]
cairo-lang-compiler = "~2.11.4"
cairo-lang-defs = "~2.11.4"
cairo-lang-diagnostics = "~2.11.4"
cairo-lang-filesystem = "~2.11.4"
cairo-lang-formatter = "~2.11.4"
cairo-lang-runner = "~2.11.4"
cairo-lang-semantic = "~2.11.4"
cairo-lang-sierra-generator = "~2.11.4"
cairo-lang-starknet = "~2.11.4"
cairo-lang-test-runner = "2.11.4"
cairo-lang-test-plugin = "2.11.4"
cairo-lang-utils = "~2.11.4"
cairo-lang-sierra = "2.11.4"
cairo-lang-sierra-to-casm = "2.11.4"
starknet-types-core = "0.1.8"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
anyhow = "1.0"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
